cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesstring-pattern.yaml/results.txt
Configuration is invalid - found 2 configuration error(s), and 0 rule(s).
semgrep error: Invalid rule schema
  --> rules/invalid-rules/string-pattern.yaml:4
4 |     - "foo"
  |       ^^^^^

'foo' is not of type 'object'

[ERROR] Rule parse error in rule eqeq:
 Strings not allowed at this position, maybe try `pattern: foo`
